# device_board_huawei

milan/: BUILD.gn  config.gni  device.gni  ohos.build
milan/camera/driver_adapter/test/unittest/src/: utest_v4l2_dev.cpp
milan/cfg/: BUILD.gn  fstab.milan  init.milan.cfg  init.milan.usb.cfg  init.modprobe.sh
milan/firmware/: BUILD.gn
milan/firmware/image/: wcnss.mbn
milan/kernel/: BUILD.gn  build_kernel.sh  check_patch.sh  make_bootimg.sh  make_kernel.mk  make_kernel.sh
milan/kernel/bootimgcfg/: bootimg.cfg
milan/kernel/configs/: milan_oh_defconfig
milan/modules/: BUILD.gn  modules_path.gni
milan/modules/lib/modules/6.0.0/: modules.alias  modules.builtin  modules.builtin.modinfo  modules.dep  modules.devname  modules.order  modules.softdep  modules.symbols
milan/modules/lib/modules/6.0.0/kernel/arch/arm64/crypto/: aes-arm64.ko  aes-ce-blk.ko  aes-ce-ccm.ko  aes-ce-cipher.ko  aes-neon-blk.ko  aes-neon-bs.ko  chacha-neon.ko  ghash-ce.ko  nhpoly1305-neon.ko  poly1305-neon.ko  polyval-ce.ko  sha1-ce.ko  sha2-ce.ko  sha256-arm64.ko  sha512-arm64.ko  sha512-ce.ko  sm4-ce.ko  sm4-neon.ko
milan/modules/lib/modules/6.0.0/kernel/crypto/: aes_generic.ko  af_alg.ko  algif_hash.ko  algif_skcipher.ko  authenc.ko  authencesn.ko  cbc.ko  ccm.ko  cmac.ko  ctr.ko  des_generic.ko  drbg.ko  ecb.ko  ecc.ko  ecdh_generic.ko  essiv.ko  gcm.ko  gf128mul.ko  ghash-generic.ko  hctr2.ko  jitterentropy_rng.ko  lz4.ko  md5.ko  nhpoly1305.ko  polyval-generic.ko  serpent_generic.ko  sha1_generic.ko  sha512_generic.ko  sm4.ko  twofish_common.ko  twofish_generic.ko  xctr.ko  xts.ko
milan/modules/lib/modules/6.0.0/kernel/crypto/asymmetric_keys/: pkcs8_key_parser.ko
milan/modules/lib/modules/6.0.0/kernel/drivers/base/regmap/: regmap-slimbus.ko
milan/modules/lib/modules/6.0.0/kernel/drivers/block/: loop.ko  nbd.ko
milan/modules/lib/modules/6.0.0/kernel/drivers/block/zram/: zram.ko
milan/modules/lib/modules/6.0.0/kernel/drivers/bluetooth/: btqca.ko  hci_uart.ko
milan/modules/lib/modules/6.0.0/kernel/drivers/gpio/: gpio-wcd934x.ko
milan/modules/lib/modules/6.0.0/kernel/drivers/gpu/drm/: drm_kms_helper.ko
milan/modules/lib/modules/6.0.0/kernel/drivers/hid/: hid-nintendo.ko  hid-sony.ko
milan/modules/lib/modules/6.0.0/kernel/drivers/hwspinlock/: qcom_hwspinlock.ko
milan/modules/lib/modules/6.0.0/kernel/drivers/i2c/: i2c-mux.ko
milan/modules/lib/modules/6.0.0/kernel/drivers/i2c/busses/: i2c-qcom-cci.ko  i2c-qup.ko
milan/modules/lib/modules/6.0.0/kernel/drivers/iio/adc/: qcom-spmi-rradc.ko
milan/modules/lib/modules/6.0.0/kernel/drivers/input/: evdev.ko  input-leds.ko
milan/modules/lib/modules/6.0.0/kernel/drivers/leds/: led-class-flash.ko  led-class-multicolor.ko  led-class.ko  leds-gpio.ko
milan/modules/lib/modules/6.0.0/kernel/drivers/md/: dm-bio-prison.ko  dm-bufio.ko  dm-crypt.ko  dm-mod.ko  dm-thin-pool.ko
milan/modules/lib/modules/6.0.0/kernel/drivers/mfd/: mfd-core.ko  wcd934x.ko
milan/modules/lib/modules/6.0.0/kernel/drivers/misc/: fastrpc.ko
milan/modules/lib/modules/6.0.0/kernel/drivers/net/: dummy.ko  macvlan.ko  tun.ko  veth.ko
milan/modules/lib/modules/6.0.0/kernel/drivers/remoteproc/: qcom_common.ko  qcom_pil_info.ko  qcom_q6v5.ko  qcom_q6v5_adsp.ko  qcom_q6v5_mss.ko  qcom_q6v5_pas.ko  qcom_sysmon.ko
milan/modules/lib/modules/6.0.0/kernel/drivers/rpmsg/: qcom_smd.ko  rpmsg_char.ko  rpmsg_ns.ko
milan/modules/lib/modules/6.0.0/kernel/drivers/rtc/: rtc-pm8xxx.ko
milan/modules/lib/modules/6.0.0/kernel/drivers/slimbus/: slim-qcom-ctrl.ko  slim-qcom-ngd-ctrl.ko  slimbus.ko
milan/modules/lib/modules/6.0.0/kernel/drivers/soundwire/: soundwire-bus.ko  soundwire-qcom.ko
milan/modules/lib/modules/6.0.0/kernel/fs/: binfmt_misc.ko
milan/modules/lib/modules/6.0.0/kernel/fs/fuse/: fuse.ko
milan/modules/lib/modules/6.0.0/kernel/fs/overlayfs/: overlay.ko
milan/modules/lib/modules/6.0.0/kernel/fs/squashfs/: squashfs.ko
milan/modules/lib/modules/6.0.0/kernel/lib/: libcrc32c.ko
milan/modules/lib/modules/6.0.0/kernel/lib/crypto/: libaes.ko  libarc4.ko  libchacha.ko  libdes.ko  libpoly1305.ko
milan/modules/lib/modules/6.0.0/kernel/lib/lz4/: lz4_compress.ko
milan/modules/lib/modules/6.0.0/kernel/mm/: zsmalloc.ko
milan/modules/lib/modules/6.0.0/kernel/net/802/: p8022.ko  psnap.ko  stp.ko
milan/modules/lib/modules/6.0.0/kernel/net/8021q/: 8021q.ko
milan/modules/lib/modules/6.0.0/kernel/net/bluetooth/: bluetooth.ko
milan/modules/lib/modules/6.0.0/kernel/net/bridge/: br_netfilter.ko  bridge.ko
milan/modules/lib/modules/6.0.0/kernel/net/ipv4/: ip_tunnel.ko  tunnel4.ko  udp_tunnel.ko
milan/modules/lib/modules/6.0.0/kernel/net/ipv6/: ip6_udp_tunnel.ko  ipv6.ko  sit.ko
milan/modules/lib/modules/6.0.0/kernel/net/llc/: llc.ko
milan/modules/lib/modules/6.0.0/kernel/net/mac80211/: mac80211.ko
milan/modules/lib/modules/6.0.0/kernel/net/netfilter/: nf_conntrack.ko  nf_nat.ko  nf_tables.ko  nfnetlink.ko  nft_chain_nat.ko  nft_ct.ko  nft_limit.ko  nft_log.ko  nft_masq.ko  nft_nat.ko  nft_reject.ko  nft_reject_inet.ko  x_tables.ko  xt_CHECKSUM.ko  xt_MASQUERADE.ko  xt_REDIRECT.ko  xt_addrtype.ko  xt_comment.ko  xt_conntrack.ko  xt_ipvs.ko  xt_mark.ko  xt_nat.ko  xt_tcpudp.ko
milan/modules/lib/modules/6.0.0/kernel/net/nfc/: nfc.ko
milan/modules/lib/modules/6.0.0/kernel/net/qrtr/: qrtr-smd.ko  qrtr-tun.ko  qrtr.ko
milan/modules/lib/modules/6.0.0/kernel/net/rfkill/: rfkill.ko
milan/modules/lib/modules/6.0.0/kernel/net/sched/: cls_cgroup.ko
milan/modules/lib/modules/6.0.0/kernel/net/wireless/: cfg80211.ko
milan/modules/lib/modules/6.0.0/kernel/sound/: soundcore.ko
milan/modules/lib/modules/6.0.0/kernel/sound/core/: snd-compress.ko  snd-pcm.ko  snd-timer.ko  snd.ko
milan/modules/lib/modules/6.0.0/kernel/sound/soc/: snd-soc-core.ko
milan/modules/lib/modules/6.6.10-postmarketos-qcom-msm8953/: build  modules.builtin  modules.builtin.modinfo  modules.order
milan/patches/: hdf_patch.sh
milan/test/: BUILD.gn
milan/test/glmark2/: BUILD.gn  res_path.gni
milan/test/native_window_ohos/: Makefile
milan/test/native_window_wrapper/: BUILD.gn
(+200 files in other folders)
