# Copyright (c) 2024 Claris <2318678921@qq.com>
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/clang/clang.gni")
import("//build/ohos.gni")
import("//build/ohos/kernel/kernel.gni")

linux_kernel_version = "linux-milan"
kernel_source_dir = "//kernel/linux/$linux_kernel_version"

# 判断内核编译类型

kernel_image = "Image.gz"
defconfig_file = "milan_oh_defconfig"

group("milan_kernel") {

    deps = [
      ":check_patch",
      ":milan_build_kernel",
      ":milan_build_bootimg",
    ]
}

action("check_patch") {
  script = "check_patch.sh"
  outputs = [ "$root_out_dir/../kernel/src_tmp/$linux_kernel_version" ]

  args = [
    rebase_path("//"),
    linux_kernel_version
  ]
}

action("milan_build_kernel") {
    script = "make_kernel.sh"
    sources = [ kernel_source_dir ]

    product_path = "vendor/$product_company/$product_name"

    outputs = [ "$root_build_dir/packages/phone/images/$kernel_image" ]

    args = [
      rebase_path("//"),
      product_path,
      target_cpu,
      linux_kernel_version,
      kernel_image,
      "$defconfig_file",
      rebase_path("$root_build_dir/packages/phone/images"),
    ]
    
    if (enable_ramdisk) {
      args += [ "enable_ramdisk" ]
    }

    print("kernel args=$args")
    deps = [
      ":check_patch",
    ]
}

action("milan_build_bootimg") {
    script = "make_bootimg.sh"

    sources = [ kernel_source_dir ]

    outputs = [ "$root_build_dir/packages/phone/images/boot.img" ]

    args = [
      rebase_path("//"),
      product_path,
      target_cpu,
      linux_kernel_version,
      kernel_image,
      "$defconfig_file",
      rebase_path("$root_build_dir/packages/phone/images"),
    ]
    deps = [
      ":milan_build_kernel",
    ]
}