# Copyright (c) 2024 Claris <2318678921@qq.com>
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

modules_files = [
  "lib/modules/6.0.0/modules.builtin.modinfo",
  "lib/modules/6.0.0/modules.symbols.bin",
  "lib/modules/6.0.0/modules.devname",
  "lib/modules/6.0.0/modules.order",
  "lib/modules/6.0.0/modules.alias.bin",
  "lib/modules/6.0.0/modules.builtin.alias.bin",
  "lib/modules/6.0.0/modules.dep.bin",
  "lib/modules/6.0.0/modules.softdep",
  "lib/modules/6.0.0/modules.builtin",
  "lib/modules/6.0.0/modules.builtin.bin",
  "lib/modules/6.0.0/modules.dep",
  "lib/modules/6.0.0/modules.alias",
  "lib/modules/6.0.0/kernel/fs/fuse/fuse.ko",
  "lib/modules/6.0.0/kernel/fs/binfmt_misc.ko",
  "lib/modules/6.0.0/kernel/fs/squashfs/squashfs.ko",
  "lib/modules/6.0.0/kernel/fs/overlayfs/overlay.ko",
  "lib/modules/6.0.0/kernel/net/mac80211/mac80211.ko",
  "lib/modules/6.0.0/kernel/net/bluetooth/hidp/hidp.ko",
  "lib/modules/6.0.0/kernel/net/bluetooth/rfcomm/rfcomm.ko",
  "lib/modules/6.0.0/kernel/net/bluetooth/bnep/bnep.ko",
  "lib/modules/6.0.0/kernel/net/bluetooth/bluetooth.ko",
  "lib/modules/6.0.0/kernel/net/ipv4/netfilter/iptable_mangle.ko",
  "lib/modules/6.0.0/kernel/net/ipv4/netfilter/nf_reject_ipv4.ko",
  "lib/modules/6.0.0/kernel/net/ipv4/netfilter/nf_defrag_ipv4.ko",
  "lib/modules/6.0.0/kernel/net/ipv4/netfilter/nft_reject_ipv4.ko",
  "lib/modules/6.0.0/kernel/net/ipv4/netfilter/iptable_filter.ko",
  "lib/modules/6.0.0/kernel/net/ipv4/netfilter/ip_tables.ko",
  "lib/modules/6.0.0/kernel/net/ipv4/netfilter/iptable_nat.ko",
  "lib/modules/6.0.0/kernel/net/ipv4/netfilter/ipt_REJECT.ko",
  "lib/modules/6.0.0/kernel/net/ipv4/tunnel4.ko",
  "lib/modules/6.0.0/kernel/net/ipv4/udp_tunnel.ko",
  "lib/modules/6.0.0/kernel/net/ipv4/ip_tunnel.ko",
  "lib/modules/6.0.0/kernel/net/sched/cls_cgroup.ko",
  "lib/modules/6.0.0/kernel/net/netfilter/xt_tcpudp.ko",
  "lib/modules/6.0.0/kernel/net/netfilter/nfnetlink.ko",
  "lib/modules/6.0.0/kernel/net/netfilter/xt_REDIRECT.ko",
  "lib/modules/6.0.0/kernel/net/netfilter/nft_limit.ko",
  "lib/modules/6.0.0/kernel/net/netfilter/xt_nat.ko",
  "lib/modules/6.0.0/kernel/net/netfilter/xt_mark.ko",
  "lib/modules/6.0.0/kernel/net/netfilter/nf_conntrack.ko",
  "lib/modules/6.0.0/kernel/net/netfilter/x_tables.ko",
  "lib/modules/6.0.0/kernel/net/netfilter/nft_log.ko",
  "lib/modules/6.0.0/kernel/net/netfilter/nf_nat.ko",
  "lib/modules/6.0.0/kernel/net/netfilter/nf_tables.ko",
  "lib/modules/6.0.0/kernel/net/netfilter/nft_masq.ko",
  "lib/modules/6.0.0/kernel/net/netfilter/xt_comment.ko",
  "lib/modules/6.0.0/kernel/net/netfilter/nft_reject.ko",
  "lib/modules/6.0.0/kernel/net/netfilter/nft_nat.ko",
  "lib/modules/6.0.0/kernel/net/netfilter/xt_CHECKSUM.ko",
  "lib/modules/6.0.0/kernel/net/netfilter/nft_ct.ko",
  "lib/modules/6.0.0/kernel/net/netfilter/xt_MASQUERADE.ko",
  "lib/modules/6.0.0/kernel/net/netfilter/xt_ipvs.ko",
  "lib/modules/6.0.0/kernel/net/netfilter/nft_chain_nat.ko",
  "lib/modules/6.0.0/kernel/net/netfilter/nft_reject_inet.ko",
  "lib/modules/6.0.0/kernel/net/netfilter/ipvs/ip_vs.ko",
  "lib/modules/6.0.0/kernel/net/netfilter/ipvs/ip_vs_rr.ko",
  "lib/modules/6.0.0/kernel/net/netfilter/xt_conntrack.ko",
  "lib/modules/6.0.0/kernel/net/netfilter/xt_addrtype.ko",
  "lib/modules/6.0.0/kernel/net/qrtr/qrtr-smd.ko",
  "lib/modules/6.0.0/kernel/net/qrtr/qrtr.ko",
  "lib/modules/6.0.0/kernel/net/qrtr/qrtr-tun.ko",
  "lib/modules/6.0.0/kernel/net/802/psnap.ko",
  "lib/modules/6.0.0/kernel/net/802/p8022.ko",
  "lib/modules/6.0.0/kernel/net/802/stp.ko",
  "lib/modules/6.0.0/kernel/net/nfc/nci/nci.ko",
  "lib/modules/6.0.0/kernel/net/nfc/nfc.ko",
  "lib/modules/6.0.0/kernel/net/8021q/8021q.ko",
  "lib/modules/6.0.0/kernel/net/rfkill/rfkill.ko",
  "lib/modules/6.0.0/kernel/net/ipv6/netfilter/nf_defrag_ipv6.ko",
  "lib/modules/6.0.0/kernel/net/ipv6/netfilter/ip6_tables.ko",
  "lib/modules/6.0.0/kernel/net/ipv6/netfilter/ip6table_nat.ko",
  "lib/modules/6.0.0/kernel/net/ipv6/netfilter/nft_reject_ipv6.ko",
  "lib/modules/6.0.0/kernel/net/ipv6/netfilter/ip6table_filter.ko",
  "lib/modules/6.0.0/kernel/net/ipv6/netfilter/nf_reject_ipv6.ko",
  "lib/modules/6.0.0/kernel/net/ipv6/netfilter/ip6table_mangle.ko",
  "lib/modules/6.0.0/kernel/net/ipv6/netfilter/ip6t_REJECT.ko",
  "lib/modules/6.0.0/kernel/net/ipv6/ip6_udp_tunnel.ko",
  "lib/modules/6.0.0/kernel/net/ipv6/sit.ko",
  "lib/modules/6.0.0/kernel/net/ipv6/ipv6.ko",
  "lib/modules/6.0.0/kernel/net/llc/llc.ko",
  "lib/modules/6.0.0/kernel/net/wireless/cfg80211.ko",
  "lib/modules/6.0.0/kernel/net/bridge/bridge.ko",
  "lib/modules/6.0.0/kernel/net/bridge/br_netfilter.ko",
  "lib/modules/6.0.0/kernel/mm/zsmalloc.ko",
  "lib/modules/6.0.0/kernel/arch/arm64/crypto/sm4-ce.ko",
  "lib/modules/6.0.0/kernel/arch/arm64/crypto/ghash-ce.ko",
  "lib/modules/6.0.0/kernel/arch/arm64/crypto/poly1305-neon.ko",
  "lib/modules/6.0.0/kernel/arch/arm64/crypto/sha512-ce.ko",
  "lib/modules/6.0.0/kernel/arch/arm64/crypto/sha1-ce.ko",
  "lib/modules/6.0.0/kernel/arch/arm64/crypto/sha512-arm64.ko",
  "lib/modules/6.0.0/kernel/arch/arm64/crypto/aes-ce-blk.ko",
  "lib/modules/6.0.0/kernel/arch/arm64/crypto/aes-arm64.ko",
  "lib/modules/6.0.0/kernel/arch/arm64/crypto/aes-ce-ccm.ko",
  "lib/modules/6.0.0/kernel/arch/arm64/crypto/sha256-arm64.ko",
  "lib/modules/6.0.0/kernel/arch/arm64/crypto/sha2-ce.ko",
  "lib/modules/6.0.0/kernel/arch/arm64/crypto/sm4-neon.ko",
  "lib/modules/6.0.0/kernel/arch/arm64/crypto/nhpoly1305-neon.ko",
  "lib/modules/6.0.0/kernel/arch/arm64/crypto/chacha-neon.ko",
  "lib/modules/6.0.0/kernel/arch/arm64/crypto/aes-neon-blk.ko",
  "lib/modules/6.0.0/kernel/arch/arm64/crypto/aes-ce-cipher.ko",
  "lib/modules/6.0.0/kernel/arch/arm64/crypto/polyval-ce.ko",
  "lib/modules/6.0.0/kernel/arch/arm64/crypto/aes-neon-bs.ko",
  "lib/modules/6.0.0/kernel/crypto/ecc.ko",
  "lib/modules/6.0.0/kernel/crypto/twofish_common.ko",
  "lib/modules/6.0.0/kernel/crypto/nhpoly1305.ko",
  "lib/modules/6.0.0/kernel/crypto/ccm.ko",
  "lib/modules/6.0.0/kernel/crypto/af_alg.ko",
  "lib/modules/6.0.0/kernel/crypto/authenc.ko",
  "lib/modules/6.0.0/kernel/crypto/algif_skcipher.ko",
  "lib/modules/6.0.0/kernel/crypto/polyval-generic.ko",
  "lib/modules/6.0.0/kernel/crypto/sha512_generic.ko",
  "lib/modules/6.0.0/kernel/crypto/algif_hash.ko",
  "lib/modules/6.0.0/kernel/crypto/authencesn.ko",
  "lib/modules/6.0.0/kernel/crypto/md5.ko",
  "lib/modules/6.0.0/kernel/crypto/cmac.ko",
  "lib/modules/6.0.0/kernel/crypto/gf128mul.ko",
  "lib/modules/6.0.0/kernel/crypto/asymmetric_keys/pkcs8_key_parser.ko",
  "lib/modules/6.0.0/kernel/crypto/hctr2.ko",
  "lib/modules/6.0.0/kernel/crypto/twofish_generic.ko",
  "lib/modules/6.0.0/kernel/crypto/lz4.ko",
  "lib/modules/6.0.0/kernel/crypto/xctr.ko",
  "lib/modules/6.0.0/kernel/crypto/drbg.ko",
  "lib/modules/6.0.0/kernel/crypto/xts.ko",
  "lib/modules/6.0.0/kernel/crypto/sm4.ko",
  "lib/modules/6.0.0/kernel/crypto/ctr.ko",
  "lib/modules/6.0.0/kernel/crypto/serpent_generic.ko",
  "lib/modules/6.0.0/kernel/crypto/ecdh_generic.ko",
  "lib/modules/6.0.0/kernel/crypto/jitterentropy_rng.ko",
  "lib/modules/6.0.0/kernel/crypto/aes_generic.ko",
  "lib/modules/6.0.0/kernel/crypto/essiv.ko",
  "lib/modules/6.0.0/kernel/crypto/gcm.ko",
  "lib/modules/6.0.0/kernel/crypto/ghash-generic.ko",
  "lib/modules/6.0.0/kernel/crypto/ecb.ko",
  "lib/modules/6.0.0/kernel/crypto/sha1_generic.ko",
  "lib/modules/6.0.0/kernel/crypto/cbc.ko",
  "lib/modules/6.0.0/kernel/crypto/des_generic.ko",
  "lib/modules/6.0.0/kernel/drivers/soc/qcom/qmi_helpers.ko",
  "lib/modules/6.0.0/kernel/drivers/soc/qcom/qcom_stats.ko",
  "lib/modules/6.0.0/kernel/drivers/soc/qcom/apr.ko",
  "lib/modules/6.0.0/kernel/drivers/soc/qcom/rmtfs_mem.ko",
  "lib/modules/6.0.0/kernel/drivers/soc/qcom/smp2p.ko",
  "lib/modules/6.0.0/kernel/drivers/soc/qcom/pdr_interface.ko",
  "lib/modules/6.0.0/kernel/drivers/soc/qcom/mdt_loader.ko",
  "lib/modules/6.0.0/kernel/drivers/net/macvlan.ko",
  "lib/modules/6.0.0/kernel/drivers/net/ipvlan/ipvlan.ko",
  "lib/modules/6.0.0/kernel/drivers/net/veth.ko",
  "lib/modules/6.0.0/kernel/drivers/net/ethernet/qualcomm/rmnet/rmnet.ko",
  "lib/modules/6.0.0/kernel/drivers/net/tun.ko",
  "lib/modules/6.0.0/kernel/drivers/net/dummy.ko",
  "lib/modules/6.0.0/kernel/drivers/net/vxlan/vxlan.ko",
  "lib/modules/6.0.0/kernel/drivers/net/wireless/ath/ath.ko",
  "lib/modules/6.0.0/kernel/drivers/net/wireless/ath/ath10k/ath10k_snoc.ko",
  "lib/modules/6.0.0/kernel/drivers/net/wireless/ath/ath10k/ath10k_core.ko",
  "lib/modules/6.0.0/kernel/drivers/net/ipa/ipa.ko",
  "lib/modules/6.0.0/kernel/drivers/soundwire/soundwire-qcom.ko",
  "lib/modules/6.0.0/kernel/drivers/soundwire/soundwire-bus.ko",
  "lib/modules/6.0.0/kernel/drivers/input/touchscreen/goodix_ts.ko",
  "lib/modules/6.0.0/kernel/drivers/input/evdev.ko",
  "lib/modules/6.0.0/kernel/drivers/input/input-leds.ko",
  "lib/modules/6.0.0/kernel/drivers/input/rmi4/rmi_core.ko",
  "lib/modules/6.0.0/kernel/drivers/input/rmi4/rmi_i2c.ko",
  "lib/modules/6.0.0/kernel/drivers/input/misc/qcom-spmi-haptics.ko",
  "lib/modules/6.0.0/kernel/drivers/input/misc/uinput.ko",
  "lib/modules/6.0.0/kernel/drivers/tty/serial/msm_serial.ko",
  "lib/modules/6.0.0/kernel/drivers/tty/serial/serial_core.ko",
  "lib/modules/6.0.0/kernel/drivers/bluetooth/hci_uart.ko",
  "lib/modules/6.0.0/kernel/drivers/bluetooth/btqca.ko",
  "lib/modules/6.0.0/kernel/drivers/power/supply/bq27xxx_battery.ko",
  "lib/modules/6.0.0/kernel/drivers/power/supply/qcom_fg.ko",
  "lib/modules/6.0.0/kernel/drivers/power/supply/qcom_pmi8998_charger.ko",
  "lib/modules/6.0.0/kernel/drivers/power/supply/bq27xxx_battery_i2c.ko",
  "lib/modules/6.0.0/kernel/drivers/leds/leds-gpio.ko",
  "lib/modules/6.0.0/kernel/drivers/leds/rgb/leds-qcom-lpg.ko",
  "lib/modules/6.0.0/kernel/drivers/leds/led-class-multicolor.ko",
  "lib/modules/6.0.0/kernel/drivers/leds/led-class.ko",
  "lib/modules/6.0.0/kernel/drivers/leds/led-class-flash.ko",
  "lib/modules/6.0.0/kernel/drivers/nfc/nxp-nci/nxp-nci_i2c.ko",
  "lib/modules/6.0.0/kernel/drivers/nfc/nxp-nci/nxp-nci.ko",
  "lib/modules/6.0.0/kernel/drivers/hid/hid-nintendo.ko",
  "lib/modules/6.0.0/kernel/drivers/hid/hid-sony.ko",
  "lib/modules/6.0.0/kernel/drivers/iio/adc/qcom-spmi-rradc.ko",
  "lib/modules/6.0.0/kernel/drivers/gpio/gpio-wcd934x.ko",
  "lib/modules/6.0.0/kernel/drivers/rtc/rtc-pm8xxx.ko",
  "lib/modules/6.0.0/kernel/drivers/remoteproc/qcom_common.ko",
  "lib/modules/6.0.0/kernel/drivers/remoteproc/qcom_pil_info.ko",
  "lib/modules/6.0.0/kernel/drivers/remoteproc/qcom_q6v5_mss.ko",
  "lib/modules/6.0.0/kernel/drivers/remoteproc/qcom_sysmon.ko",
  "lib/modules/6.0.0/kernel/drivers/remoteproc/qcom_q6v5_pas.ko",
  "lib/modules/6.0.0/kernel/drivers/remoteproc/qcom_q6v5.ko",
  "lib/modules/6.0.0/kernel/drivers/remoteproc/qcom_q6v5_adsp.ko",
  "lib/modules/6.0.0/kernel/drivers/video/fbdev/core/syscopyarea.ko",
  "lib/modules/6.0.0/kernel/drivers/video/fbdev/core/fb_sys_fops.ko",
  "lib/modules/6.0.0/kernel/drivers/video/fbdev/core/cfbimgblt.ko",
  "lib/modules/6.0.0/kernel/drivers/video/fbdev/core/sysfillrect.ko",
  "lib/modules/6.0.0/kernel/drivers/video/fbdev/core/cfbfillrect.ko",
  "lib/modules/6.0.0/kernel/drivers/video/fbdev/core/sysimgblt.ko",
  "lib/modules/6.0.0/kernel/drivers/video/fbdev/core/cfbcopyarea.ko",
  "lib/modules/6.0.0/kernel/drivers/rpmsg/rpmsg_char.ko",
  "lib/modules/6.0.0/kernel/drivers/rpmsg/rpmsg_ns.ko",
  "lib/modules/6.0.0/kernel/drivers/rpmsg/qcom_smd.ko",
  "lib/modules/6.0.0/kernel/drivers/base/regmap/regmap-slimbus.ko",
  "lib/modules/6.0.0/kernel/drivers/i2c/busses/i2c-qcom-cci.ko",
  "lib/modules/6.0.0/kernel/drivers/i2c/busses/i2c-qup.ko",
  "lib/modules/6.0.0/kernel/drivers/i2c/i2c-mux.ko",
  "lib/modules/6.0.0/kernel/drivers/slimbus/slim-qcom-ctrl.ko",
  "lib/modules/6.0.0/kernel/drivers/slimbus/slim-qcom-ngd-ctrl.ko",
  "lib/modules/6.0.0/kernel/drivers/slimbus/slimbus.ko",
  "lib/modules/6.0.0/kernel/drivers/media/platform/qcom/camss/qcom-camss.ko",
  "lib/modules/6.0.0/kernel/drivers/media/mc/mc.ko",
  "lib/modules/6.0.0/kernel/drivers/media/v4l2-core/v4l2-dv-timings.ko",
  "lib/modules/6.0.0/kernel/drivers/media/v4l2-core/v4l2-async.ko",
  "lib/modules/6.0.0/kernel/drivers/media/v4l2-core/v4l2-fwnode.ko",
  "lib/modules/6.0.0/kernel/drivers/media/v4l2-core/videodev.ko",
  "lib/modules/6.0.0/kernel/drivers/media/i2c/imx355.ko",
  "lib/modules/6.0.0/kernel/drivers/media/common/videobuf2/videobuf2-common.ko",
  "lib/modules/6.0.0/kernel/drivers/media/common/videobuf2/videobuf2-v4l2.ko",
  "lib/modules/6.0.0/kernel/drivers/media/common/videobuf2/videobuf2-dma-sg.ko",
  "lib/modules/6.0.0/kernel/drivers/media/common/videobuf2/videobuf2-vmalloc.ko",
  "lib/modules/6.0.0/kernel/drivers/media/common/videobuf2/videobuf2-memops.ko",
  "lib/modules/6.0.0/kernel/drivers/hwspinlock/qcom_hwspinlock.ko",
  "lib/modules/6.0.0/kernel/drivers/usb/gadget/legacy/g_ffs.ko",
  "lib/modules/6.0.0/kernel/drivers/usb/gadget/function/usb_f_uvc.ko",
  "lib/modules/6.0.0/kernel/drivers/block/zram/zram.ko",
  "lib/modules/6.0.0/kernel/drivers/block/loop.ko",
  "lib/modules/6.0.0/kernel/drivers/block/nbd.ko",
  "lib/modules/6.0.0/kernel/drivers/mfd/wcd934x.ko",
  "lib/modules/6.0.0/kernel/drivers/mfd/mfd-core.ko",
  "lib/modules/6.0.0/kernel/drivers/misc/fastrpc.ko",
  "lib/modules/6.0.0/kernel/drivers/gpu/drm/display/drm_dp_aux_bus.ko",
  "lib/modules/6.0.0/kernel/drivers/gpu/drm/display/drm_display_helper.ko",
  "lib/modules/6.0.0/kernel/drivers/gpu/drm/drm_kms_helper.ko",
  "lib/modules/6.0.0/kernel/drivers/gpu/drm/scheduler/gpu-sched.ko",
  "lib/modules/6.0.0/kernel/drivers/gpu/drm/msm/msm.ko",
  "lib/modules/6.0.0/kernel/drivers/md/dm-bufio.ko",
  "lib/modules/6.0.0/kernel/drivers/md/dm-mod.ko",
  "lib/modules/6.0.0/kernel/drivers/md/persistent-data/dm-persistent-data.ko",
  "lib/modules/6.0.0/kernel/drivers/md/dm-bio-prison.ko",
  "lib/modules/6.0.0/kernel/drivers/md/dm-thin-pool.ko",
  "lib/modules/6.0.0/kernel/drivers/md/dm-crypt.ko",
  "lib/modules/6.0.0/kernel/lib/crypto/libchacha.ko",
  "lib/modules/6.0.0/kernel/lib/crypto/libarc4.ko",
  "lib/modules/6.0.0/kernel/lib/crypto/libpoly1305.ko",
  "lib/modules/6.0.0/kernel/lib/crypto/libaes.ko",
  "lib/modules/6.0.0/kernel/lib/crypto/libdes.ko",
  "lib/modules/6.0.0/kernel/lib/lz4/lz4_compress.ko",
  "lib/modules/6.0.0/kernel/lib/libcrc32c.ko",
  "lib/modules/6.0.0/kernel/sound/soc/codecs/snd-soc-lpass-va-macro.ko",
  "lib/modules/6.0.0/kernel/sound/soc/codecs/snd-soc-lpass-macro-common.ko",
  "lib/modules/6.0.0/kernel/sound/soc/codecs/snd-soc-wcd9335.ko",
  "lib/modules/6.0.0/kernel/sound/soc/codecs/snd-soc-hdmi-codec.ko",
  "lib/modules/6.0.0/kernel/sound/soc/codecs/snd-soc-lpass-rx-macro.ko",
  "lib/modules/6.0.0/kernel/sound/soc/codecs/snd-soc-lpass-tx-macro.ko",
  "lib/modules/6.0.0/kernel/sound/soc/codecs/snd-soc-wcd934x.ko",
  "lib/modules/6.0.0/kernel/sound/soc/codecs/snd-soc-lpass-wsa-macro.ko",
  "lib/modules/6.0.0/kernel/sound/soc/codecs/snd-soc-wcd-mbhc.ko",
  "lib/modules/6.0.0/kernel/sound/soc/qcom/qdsp6/snd-q6dsp-common.ko",
  "lib/modules/6.0.0/kernel/sound/soc/qcom/qdsp6/q6prm-clocks.ko",
  "lib/modules/6.0.0/kernel/sound/soc/qcom/qdsp6/snd-q6apm.ko",
  "lib/modules/6.0.0/kernel/sound/soc/qcom/qdsp6/q6asm-dai.ko",
  "lib/modules/6.0.0/kernel/sound/soc/qcom/qdsp6/q6apm-dai.ko",
  "lib/modules/6.0.0/kernel/sound/soc/qcom/qdsp6/q6asm.ko",
  "lib/modules/6.0.0/kernel/sound/soc/qcom/qdsp6/q6afe.ko",
  "lib/modules/6.0.0/kernel/sound/soc/qcom/qdsp6/q6prm.ko",
  "lib/modules/6.0.0/kernel/sound/soc/qcom/qdsp6/q6routing.ko",
  "lib/modules/6.0.0/kernel/sound/soc/qcom/qdsp6/q6apm-lpass-dais.ko",
  "lib/modules/6.0.0/kernel/sound/soc/qcom/qdsp6/q6afe-dai.ko",
  "lib/modules/6.0.0/kernel/sound/soc/qcom/qdsp6/q6afe-clocks.ko",
  "lib/modules/6.0.0/kernel/sound/soc/qcom/qdsp6/q6adm.ko",
  "lib/modules/6.0.0/kernel/sound/soc/qcom/qdsp6/q6core.ko",
  "lib/modules/6.0.0/kernel/sound/soc/qcom/snd-soc-lpass-cpu.ko",
  "lib/modules/6.0.0/kernel/sound/soc/qcom/snd-soc-apq8096.ko",
  "lib/modules/6.0.0/kernel/sound/soc/qcom/snd-soc-apq8016-sbc.ko",
  "lib/modules/6.0.0/kernel/sound/soc/qcom/snd-soc-lpass-apq8016.ko",
  "lib/modules/6.0.0/kernel/sound/soc/qcom/snd-soc-lpass-hdmi.ko",
  "lib/modules/6.0.0/kernel/sound/soc/qcom/snd-soc-lpass-platform.ko",
  "lib/modules/6.0.0/kernel/sound/soc/qcom/snd-soc-qcom-common.ko",
  "lib/modules/6.0.0/kernel/sound/soc/snd-soc-core.ko",
  "lib/modules/6.0.0/kernel/sound/core/snd-compress.ko",
  "lib/modules/6.0.0/kernel/sound/core/snd.ko",
  "lib/modules/6.0.0/kernel/sound/core/snd-timer.ko",
  "lib/modules/6.0.0/kernel/sound/core/snd-pcm.ko",
  "lib/modules/6.0.0/kernel/sound/soundcore.ko",
  "lib/modules/6.0.0/modules.symbols",
  ]